rota get tasks
