# src/routes/tarefas.js
@@ -52,4 +52,23 @@ router.put('/editar/:id', authUser, conectarBancoDados, async function (req, res
   }
 });
 
+router.get('/obter/usuario', authUser, conectarBancoDados, async function (req, res) {
+  try {
+    // #swagger.tags = ['Tarefa']
+    // #swagger.description = "Endpoint para obter todas tarefas do usuario logado."
+    const usuarioLogado = req.usuarioJwt.id;
+    const respostaBD = await EsquemaTarefa.find({ usuarioCriador: usuarioLogado }).populate('usuarioCriador');
+
+    res.status(200).json({
+      status: "OK",
+      statusMensagem: "Tarefas listadas na respota com sucesso.",
+      resposta: respostaBD
+    })
+
+  } catch (error) {
+    return tratarErrosEsperados(res, error);
+  }
+});
+
+
 module.exports = router;
